class names fixed

--- a/style.sass
+++ b/style.sass
@@ -207,8 +207,9 @@ p
   border-right: none
   border-collapse: collapse
 
-tr
+.calendar-row
   height: calc(100%/7)
+
 td
   width: calc(100%/7)
   padding: 3px
